welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: ';' expected but 'if' found.
	} if (!aSmile && !bSmile) {
          ^